# Py_DSSATTools

./: .gitignore  .gitmodules  .readthedocs.yaml  DSSATTools.rst  MCMC_Example.ipynb  README.md  Run Model.ipynb  SAMPLE.fileX  debug_filex.py  future_features.md  index.md  issue38.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: draft-pdf.yaml
DSSATTools/: MCMC.py  __init__.py  crop.py  dssatUtils.py  exceptions.py  filex.py  format.py  management.py  mngm.py  new_crops.py  run.py  soil.py  weather.py
DSSATTools/base/: CERES.py  formater.py  input.py  partypes.py  sections.py  utils.py
DSSATTools/models/: CANEGRO.py  CERES.py  CERESMaize.py  CROPGRO.py  FORAGE.py  SUBSTOR.py
DSSATTools/static/: DATA.CDE  MODEL.ERR  OUTPUT.CDE  SIMULATION.CDE
DSSATTools/static/Genotype/: ALFRM048.CUL  ALFRM048.ECO  ALFRM048.SPE  BACER048.CUL  BACER048.ECO  BACER048.SPE  BACRP048.CUL  BACRP048.SPE  BCGRO048.CUL  BCGRO048.ECO  BCGRO048.SPE  BHGRO048.CUL  BHGRO048.SPE  BMFRM048.CUL  BMFRM048.SPE  BNGRO048.CUL  BNGRO048.ECO  BNGRO048.SPE  BRFRM048.CUL  BRFRM048.SPE  BRGRO048.SPE  BSCER048.ECO  BSCER048.SPE  CBGRO048.CUL  CBGRO048.ECO  CBGRO048.SPE  CHGRO048.CUL  CHGRO048.SPE  CIGRO048.CUL  CIGRO048.ECO  CIGRO048.SPE  CNGRO048.CUL  (+100 more)
DSSATTools/tests/: __init__.py  test_run.py  test_soil.py  test_weather.py
crop_test/: MZCER048.CUL  MZCER048.ECO
docs/: DSSATTools.rst  api.rst  conf.py  index.rst  requirements.txt
docs/source/: conf.py
paper/: paper.bib  paper.md
tests/: test_crop.py  test_run.py  test_soil.py  test_weather.py
tests/input_files/: AG.SOL  BR.SOL  UFBR9401.WTH
wth_test/: WSTA0011.WTH
(+6 files in other folders)
